--- a/package.json
+++ b/package.json
@@ -39,6 +39,8 @@
     "@radix-ui/react-toggle-group": "1.1.1",
     "@radix-ui/react-tooltip": "1.1.3",
     "@tailwindcss/typography": "0.5.15",
+    "@types/mongodb": "^4.0.6",
+    "@types/nodemailer": "^6.4.17",
     "@types/react-window": "^1.8.8",
     "autoprefixer": "10.4.20",
     "class-variance-authority": "0.7.0",
@@ -48,8 +50,11 @@
     "embla-carousel-react": "8.3.0",
     "input-otp": "1.2.0",
     "lucide-react": "0.441.0",
+    "mongodb": "^6.16.0",
     "next": "15.2.4",
     "next-themes": "0.3.0",
+    "nodemailer": "^7.0.3",
+    "razorpay": "^2.9.6",
     "react": "18.3.1",
     "react-day-picker": "8.10.1",
     "react-dom": "18.3.1",
