--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@radix-ui/react-toggle-group": "1.1.1",
     "@radix-ui/react-tooltip": "1.1.3",
     "@tailwindcss/typography": "0.5.15",
+    "@types/jspdf": "^1.3.3",
     "@types/mongodb": "^4.0.6",
     "@types/nodemailer": "^6.4.17",
     "@types/react-window": "^1.8.8",
@@ -49,6 +50,7 @@
     "date-fns": "3.6.0",
     "embla-carousel-react": "8.3.0",
     "input-otp": "1.2.0",
+    "jspdf": "^3.0.1",
     "lucide-react": "0.441.0",
     "mongodb": "^6.16.0",
     "next": "15.2.4",
